plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.koo'
version = '0.0.1-SNAPSHOT'
description = 'aoi-api'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// WebClient를 사용하기 위한 의존성
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// Spring Data JPA: 데이터베이스 연동을 위한 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Swagger (OpenAPI)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	// MySQL 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// okhttp3 mockwebserver
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	// reactor-test
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
